--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,6 +1,8 @@
 <h1>Main#index</h1>
 <p>Find me in app/views/main/index.html.erb</p>
 
- <% @results.each do |item| %>
- <%=	item['id'] %>
- <% end %>
+<% @results.each do |item| %>
+<div class="well">
+  <h1><%= item['description']  %></h1>
+</div>
+<% end %>
