--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -4,5 +4,7 @@
 <% @results.each do |item| %>
 <div class="well">
   <h1><%= item['description']  %></h1>
+  <iframe src="<%= item['download_urls']['mp4'] %>"></iframe>
+
 </div>
 <% end %>
