--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -4,7 +4,7 @@
 <% @results.each do |item| %>
 <div class="well">
   <h1><%= item['description']  %></h1>
-  <iframe src="<%= item['download_urls']['mp4'] %>"></iframe>
+  <iframe src="<%= item['download_urls']['mp4'] %>" width="400" height="200"></iframe>
 
 </div>
 <% end %>
