--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,6 +1,13 @@
 <h1>Main#index</h1>
 <p>Find me in app/views/main/index.html.erb</p>
 
+<%= link_to "Login with Facebook", "/auth/facebook/callback", class: "btn btn-primary" %>
+
+<div class="well">
+  Current User: 
+  <%= @current_user.inspect %>  
+</div>
+
 <% @results.each do |item| %>
 <div class="well">
   <h1><%= item['description']  %></h1>
