--- a/app/views/lessons/edit.html.erb
+++ b/app/views/lessons/edit.html.erb
@@ -1,2 +1,10 @@
 <h1>Lessons#edit</h1>
 <p>Find me in app/views/lessons/edit.html.erb</p>
+
+
+<%= bootstrap_form_for @lesson do |c| %>
+  <%= c.text_area :title %>
+  <%= c.text_field :description %>
+
+  <%= c.primary %>
+<% end %>
