--- a/app/views/lessons/show.html.erb
+++ b/app/views/lessons/show.html.erb
@@ -1,2 +1,10 @@
 <h1>Lessons#show</h1>
 <p>Find me in app/views/lessons/show.html.erb</p>
+
+
+<%= link_to 'Back Home', lessons_path, class: 'btn' %>
+
+<div class="well">
+  <h2><%= @lesson.title %></h2>
+  <p><%= @lesson.description %></p>
+</div>
