--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,7 +1,11 @@
 <h1>Main#index</h1>
 <p>Find me in app/views/main/index.html.erb</p>
 
-<%= link_to "Login with Facebook", "/auth/facebook/callback", class: "btn btn-primary" %>
+<%= link_to "Login with Facebook", "/auth/facebook", class: "btn btn-primary" %>
+
+<% if @current_user  %>
+  <%= link_to "Logout", auth_logout_path, class: 'btn btn-danger' %>
+<% end  %> 
 
 <div class="well">
   Current User: 
