--- a/app/views/lessons/new.html.erb
+++ b/app/views/lessons/new.html.erb
@@ -1,2 +1,11 @@
 <h1>Lessons#new</h1>
 <p>Find me in app/views/lessons/new.html.erb</p>
+
+
+<% @results.each do |item| %>
+<div class="well">
+  <h1><%= item['description']  %></h1>
+  <iframe src="<%= item['download_urls']['mp4'] %>" width="400" height="200"></iframe>
+
+</div>
+<% end %>
