--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -1,3 +1,121 @@
-// Place all the styles related to the main controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+body {
+	font-family: 'Open Sans Condensed', sans-serif;
+	background-color: #b6ebef;
+	padding-top:60px;
+	padding-bottom:50px;
+	text-align: center;
+	line-height: 10px;
+}
+
+h1 {
+	font-family: 'Amatic SC';
+	font-size: 36px;
+	font-style: normal;
+	font-variant: normal;
+	font-weight: 500;
+	line-height: 26.4px;
+  padding: 10px;
+}
+h3 {
+	font-family: 'Amatic SC';
+	font-size: 26px;
+	font-style: normal;
+	font-variant: normal;
+	font-weight: 500;
+	line-height: 15.4px;
+  padding: 5px;
+}
+
+#p {
+	font-family: 'Open Sans Condensed', sans-serif;
+  	font-size: 16px;
+  	margin-left: 9px;
+  	line-height: 10px;
+    padding: 5px;
+
+  }
+
+.container {
+	background-color: #b6ebef;
+	width: 50%;
+  	height: 50%;
+  	text-align: center;
+  	margin-left: 25%;
+  	padding: 10px;
+}
+
+.well {
+	background-color: white;
+	width: 500px;
+	margin: 0 auto;
+	padding: 10px;
+}
+
+.row {
+	background-color: #b6ebef;
+  padding: 10px;
+}
+
+@mixin border ($radius) {
+      -webkit-border-radius: $radius;
+       -moz-border-radius: $radius;
+            border-radius: $radius;
+
+}
+
+.navbar {
+    @include border(10px);
+    background-color: white;
+    overflow:hidden;
+
+    ul {
+      li {
+        @include border(10px);
+        float: left;
+        margin: 10px;
+      }
+    }
+
+}
+
+/*.navbar {
+  height: 75px;
+  background-color: white; }
+  @media screen and (orientation: landscape) {
+    .sidebar {
+      width: 500px; } }*/
+
+.btn {
+	font-family: 'Open Sans Condensed', sans-serif;
+	color: white;
+  display: inline-block;
+  margin: 10;
+  text-align: center;
+  vertical-align: middle;
+  cursor: pointer;
+  background-color: #b6ebef;
+  padding: 5px 5px;
+    font-size: 18px;
+    line-height: normal;
+    -webkit-border-radius: 8px;
+       -moz-border-radius: 8px;
+            border-radius: 8px;
+    }
+
+.btn:focus, .btn:active:focus, .btn.active:focus {
+    outline: 0 none;
+}
+ 
+.btn-primary {
+    background: #b6ebef;
+    color: #ffffff;
+}
+ 
+.btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active, .open > .dropdown-toggle.btn-primary {
+    background: white;
+    color: black;
+}
+
+.btn.sharp {
+  border-radius:0;
+}
