Main viewpage/SASS styling

--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,6 +1,10 @@
 <div class="container">
+
 	<div class="header-text">
-		<h1>Welcome!</h1>
+		<h1>Welcome to BrushUp</h1>
+		<h2>What do you want to learn today?</h2><br>
+	</div>
+		<div class="divider">
 	</div>
 	<div class="row">
-		<button href="#" class="facebook button split"> <span></span>sign in with facebook</button>
+		<button href="#"> <span>Search</span></button>
