--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,40 +1,18 @@
-body {
-  background-image:url("http://xomisse.com/wp-content/uploads/2015/11/homeBG1.jpg");
-  font-family: 'Karla', Arial, sans-serif;
-  font-size: 100%;
-  line-height: 1.6;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-position: center center;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  background-size: cover;
-}
-h1, h2, h3, h4, h5, h6 {
-  font-weight: bold;
-  -webkit-hyphens: auto;
-     -moz-hyphens: auto;
-      -ms-hyphens: auto;
-      hyphens: auto;
-}
-
-.header-text {
-  font-family:"Montserrat", Arial, sans-serif;
-  font-size:40px;color:#FFFFFF;
-}
-
-.secondary-text {
-  font-family:"Karla", Arial, sans-serif;
-  font-size:20px;
-  color:#FFFFFF;
-}
-.container {
-  max-width:850px;
-  margin-left:auto;
-  margin-right:auto;
-  text-align:center;
-}
-
-.content input {
-  text-align:center;}
-
+/*
+ * This is a manifest file that'll be compiled into application.css, which will include all the files
+ * listed below.
+ *
+ * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
+ * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
+ *
+ * You're free to add application-wide styles to this file and they'll appear at the bottom of the
+ * compiled file so the styles you add here take precedence over styles defined in any styles
+ * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
+ * file per style scope.
+ *
+ *= require_tree .
+ *= require_self
+ *= require font-awesome
+ */
+ /*
+ */
