--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -1,121 +1,70 @@
 body {
-	font-family: 'Open Sans Condensed', sans-serif;
-	background-color: #b6ebef;
-	padding-top:60px;
-	padding-bottom:50px;
-	text-align: center;
-	line-height: 10px;
+  background-image:url("http://xomisse.com/wp-content/uploads/2015/11/homeBG1.jpg");
+  font-family: 'Karla', Arial, sans-serif;
+  font-size: 100%;
+  line-height: 1.6;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  background-size: cover;
+}
+h1, h2, h3, h4, h5, h6 {
+  font-weight: bold;
+  -webkit-hyphens: auto;
+     -moz-hyphens: auto;
+      -ms-hyphens: auto;
+      hyphens: auto;
 }
 
 h1 {
-	font-family: 'Amatic SC';
-	font-size: 36px;
-	font-style: normal;
-	font-variant: normal;
-	font-weight: 500;
-	line-height: 26.4px;
-  padding: 10px;
-}
-h3 {
-	font-family: 'Amatic SC';
-	font-size: 26px;
-	font-style: normal;
-	font-variant: normal;
-	font-weight: 500;
-	line-height: 15.4px;
-  padding: 5px;
+  font-size: 42px;
 }
 
-#p {
-	font-family: 'Open Sans Condensed', sans-serif;
-  	font-size: 16px;
-  	margin-left: 9px;
-  	line-height: 10px;
-    padding: 5px;
+h2 {
+  font-size: 28px;
+}
 
-  }
+a {
+  color: #fff;
+  text-decoration: none; }
+  a:hover {
+    color: ""; }
 
+.header-text {
+  font-family:"Montserrat", Arial, sans-serif;
+  font-size:40px;color:#FFFFFF;
+}
+
+.secondary-text {
+  font-family:"Karla", Arial, sans-serif;
+  font-size:20px;
+  color:#FFFFFF;
+}
 .container {
-	background-color: #b6ebef;
-	width: 50%;
-  	height: 50%;
-  	text-align: center;
-  	margin-left: 25%;
-  	padding: 10px;
+  background-color: #000;
+  max-width:850px;
+  padding-top: 0px;
+  margin-left:auto;
+  margin-right:auto;
+  margin-top: 150px;
+  vertical-align: center;
+  text-align:center;
+  opacity: 0.7;
+  filter: alpha(opacity=80);
+  border-style: solid black;
 }
 
-.well {
-	background-color: white;
-	width: 500px;
-	margin: 0 auto;
-	padding: 10px;
+.content input {
+  text-align:center;}
+
+.divider {
+  display: block;
+  margin: 5px auto;
+  width: 50%;
+  height: 1px;
+  border-top: rgba(0, 0, 0, 0.1) 1px solid;
+  border-bottom: rgba(255, 255, 255, 0.2) 1px solid; 
 }
 
-.row {
-	background-color: #b6ebef;
-  padding: 10px;
-}
-
-@mixin border ($radius) {
-      -webkit-border-radius: $radius;
-       -moz-border-radius: $radius;
-            border-radius: $radius;
-
-}
-
-.navbar {
-    @include border(10px);
-    background-color: white;
-    overflow:hidden;
-
-    ul {
-      li {
-        @include border(10px);
-        float: left;
-        margin: 10px;
-      }
-    }
-
-}
-
-/*.navbar {
-  height: 75px;
-  background-color: white; }
-  @media screen and (orientation: landscape) {
-    .sidebar {
-      width: 500px; } }*/
-
-.btn {
-	font-family: 'Open Sans Condensed', sans-serif;
-	color: white;
-  display: inline-block;
-  margin: 10;
-  text-align: center;
-  vertical-align: middle;
-  cursor: pointer;
-  background-color: #b6ebef;
-  padding: 5px 5px;
-    font-size: 18px;
-    line-height: normal;
-    -webkit-border-radius: 8px;
-       -moz-border-radius: 8px;
-            border-radius: 8px;
-    }
-
-.btn:focus, .btn:active:focus, .btn.active:focus {
-    outline: 0 none;
-}
- 
-.btn-primary {
-    background: #b6ebef;
-    color: #ffffff;
-}
- 
-.btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active, .open > .dropdown-toggle.btn-primary {
-    background: white;
-    color: black;
-}
-
-.btn.sharp {
-  border-radius:0;
-}
