--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,11 +30,11 @@
 
   <nav>
     <div class="nav-wrapper black">
-      <a href="#" class="brand-logo">BrushUp Logo</a>
+      <a href="#" class="brand-logo">BrushUp</a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li><a href="sass.html">Login</a></li>
-        <li><a href="badges.html">Signup</a></li>
-        <li><a href="collapsible.html">Test</a></li>
+        <li><a href="#">Login</a></li>
+        <li><a href="#">Signup</a></li>
+        <li><a href="http://www.github.com"><i class="fa fa-github"></i></a></li>
       </ul>
     </div>
   </nav>
