Main View Layout

--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -2,7 +2,7 @@
 
 	<div class="header-text">
 		<h1>Welcome to BrushUp</h1>
-		<h2>What do you want to learn today?</h2><br>
+		<h2>What would you like to learn today?</h2><br>
 	</div>
 		<div class="divider">
 	</div>
