--- a/app/views/lessons/index.html.erb
+++ b/app/views/lessons/index.html.erb
@@ -1,22 +1,13 @@
 <h1>Lessons#index</h1>
 <p>Find me in app/views/lessons/index.html.erb</p>
 
-
-<%= form_tag(lessons_path, :method => "get", id: "search-form") do %>
-<%= text_field_tag :query, params[:query], placeholder: "Search Posts" %>
+<%= form_tag(new_lesson_path, :method => "get", :url => "new_lessons_path", id: "search-form") do %>
+Search Posts<%= text_field_tag :query %>
 <%= submit_tag "Search" %>
 <% end %>
 
 
-<% @results.each do |item| %>
-<div class="well">
-  <h1><%= item['description']  %></h1>
-  <iframe src="<%= item['download_urls']['mp4'] %>" width="400" height="200"></iframe>
 
-<%= link_to 'Pick Lesson', new_lesson_path, class: 'btn btn-success' %>
-
-</div>
-<% end %>
 
 
 
