--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,3 +1,24 @@
 <h1>Main#index</h1>
 <p>Find me in app/views/main/index.html.erb</p>
 
+<!-- upload tag -->
+<%= form_for @upload do |f| %>
+	<p>
+		<%= f.text_field :title, :placeholder => "image title" %>
+	</p>
+	<p>	
+		<%= f.file_field :picture %>
+	</p>
+	<p>
+		<%= f.submit %>
+	</p>
+<% end %>
+
+<!-- display image -->
+<% @uploads.each do |upload| %>
+<div>
+	<h3><%= upload.title  %></h3>
+	<%= cl_image_tag(upload.cloud_id, :width => 500) %>
+
+<% end %>
+
