moved search fxn to main index and moved cloudinary to profile view

--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -3,27 +3,10 @@
 		<h1>Welcome to BrushUp</h1>
 		<h2>What would you like to learn today?</h2><br>
 	</div>
-		<div class="divider">
-	</div>
-	<div class="row">
-		<button href="#"> <span>Search</span></button>
-<!-- upload tag -->
-<%= form_for @upload do |f| %>
-	<p>
-		<%= f.text_field :title, :placeholder => "image title" %>
-	</p>
-	<p>	
-		<%= f.file_field :picture %>
-	</p>
-	<p>
-		<%= f.submit %>
-	</p>
-<% end %>
 
-<!-- display image -->
-<% @uploads.each do |upload| %>
-<div>
-	<h3><%= upload.title  %></h3>
-	<%= cl_image_tag(upload.cloud_id, :width => 500) %>
 
+
+<%= form_tag(new_lesson_path, :method => "get", :url => "new_lessons_path", id: "search-form") do %>
+Search Posts<%= text_field_tag :query %>
+<%= submit_tag "Search" %>
 <% end %>
