--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -4,7 +4,7 @@
 		<h2>What would you like to learn today?</h2><br>
 	</div>
 
-
+<%= link_to "Login with Facebook", "/auth/facebook", class: "btn btn-primary" %>
 
 <%= form_tag(new_lesson_path, :method => "get", :url => "new_lessons_path", id: "search-form") do %>
 Search Posts<%= text_field_tag :query %>
