--- a/app/views/lessons/new.html.erb
+++ b/app/views/lessons/new.html.erb
@@ -2,10 +2,8 @@
 <p>Find me in app/views/lessons/new.html.erb</p>
 
 
-<% @results.each do |item| %>
+<% @response.each do |item| %>
 <div class="well">
-  <h1><%= item['description']  %></h1>
-  <iframe src="<%= item['download_urls']['mp4'] %>" width="400" height="200"></iframe>
-
+  <%= item[title] %>
 </div>
 <% end %>
