--- a/app/views/lessons/new.html.erb
+++ b/app/views/lessons/new.html.erb
@@ -1,11 +1,21 @@
-<h1>Lessons#new</h1>
-<p>Find me in app/views/lessons/new.html.erb</p>
-
-
 <% @results.each do |item| %>
-<div class="well">
-  <h1><%= item['description']  %></h1>
+
+<div class="content">
+    <div class="row">
+      <div class="small-3 column">
+  		<h3><%= item['description']  %></h3>
+      </div>
+      <div class="small-9 column">
   <iframe src="<%= item['download_urls']['mp4'] %>" width="400" height="200"></iframe>
+      </div>
+    </div>
+</div>
+
+    <%= javascript_include_tag "application" %>
+  </body>
+</html>
+
+
 
 </div>
 <% end %>
