--- a/app/views/lessons/index.html.erb
+++ b/app/views/lessons/index.html.erb
@@ -1,6 +1,8 @@
 <h1>Lessons#index</h1>
 <p>Find me in app/views/lessons/index.html.erb</p>
 
+  Current User: <%= @current_user.inspect %>
+
 <%  @response.each do |video| %>
 <div class="container">
   <h3><%= video.title %></h3> 
@@ -10,6 +12,7 @@
   <p>
     <%= form_for :video, :url => {:action => "new"}, :html => {:method => "GET"} do |f| %>
       <%= f.hidden_field :id, :value => video.video_id %>
+      <%= f.hidden_field :user_id, :value => @current_user %>
       <%= f.submit %>
     <% end %>
   </p>
