--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,12 +1,12 @@
 <div class="container">
 	<div class="header-text">
 		<h1>Welcome to BrushUp</h1>
+		<!-- <a href="/assets/test.jpg" class="fresco">Fresco jQuery Test</a> -->
 		<h2>What would you like to learn today?</h2><br>
 	</div>
 
 <%= link_to "Login with Facebook", "/auth/facebook", class: "btn btn-primary" %>
 
-<%= form_tag(lessons_path, :method => "get", :url => "lessons_path", id: "search-form") do %>
-Search Posts<%= text_field_tag :query %>
+<%= form_tag(lessons_path, :method => "get", :url => "lessons_path", id: "search-form") do %><%= text_field_tag :query %>
 <%= submit_tag "Search" %>
 <% end %>
