added current user to header and played around with cloudinary

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,7 +35,7 @@
       <ul id="nav-mobile" class="right hide-on-med-and-down">
         <li><a href="#">Login</a></li>
         <li><a href="#">Signup</a></li>
-        <li><a href='profile'>Profile</a></li>
+        <li><%=link_to "Profile", profile_index_path %></li>
         <li><a href="http://www.github.com"><i class="fa fa-github"></i></a></li>
       </ul>
     </div>
