--- a/app/assets/stylesheets/lessons.scss
+++ b/app/assets/stylesheets/lessons.scss
@@ -1,3 +1,37 @@
 // Place all the styles related to the lessons controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.span_4_of_4 {
+    width: 100%; 
+}
+
+.span_3_of_4 {
+    width: 74.6%; 
+}
+
+.span_2_of_4 {
+    width: 49.2%; 
+}
+
+.span_1_of_4 {
+    width: 23.8%; 
+}
+
+
+/*  GO FULL WIDTH AT LESS THAN 480 PIXELS */
+
+@media only screen and (max-width: 480px) {
+    .span_4_of_4 {
+        width: 100%; 
+    }
+    .span_3_of_4 {
+        width: 100%; 
+    }
+    .span_2_of_4 {
+        width: 100%; 
+    }
+    .span_1_of_4 {
+        width: 100%; 
+    }
+}
