--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -1,5 +1,5 @@
 body {
-  background-image:url("http://xomisse.com/wp-content/uploads/2015/11/homeBG1.jpg");
+  background-color: #fff;
   font-family: 'Karla', Arial, sans-serif;
   font-size: 100%;
   line-height: 1.6;
