--- a/app/views/lessons/index.html.erb
+++ b/app/views/lessons/index.html.erb
@@ -1,6 +1,3 @@
-<h1>Lessons#index</h1>
-<p>Find me in app/views/lessons/index.html.erb</p>
-
 <%= @current_user.name %>
 
 <%  @response.each do |video| %>
@@ -13,7 +10,7 @@
     <%= form_for :video, :url => {:action => "new"}, :html => {:method => "GET"} do |f| %>
       <%= f.hidden_field :id, :value => video.video_id %>
       <%= f.hidden_field :user_id, :value => @current_user.id %>
-      <%= f.submit %>
+      <%= f.submit class: 'btn btn-primary'%>
     <% end %>
   </p>
 
