--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -50,7 +50,7 @@ a {
 }
 .container {
   background-color: #000;
-  max-width:850px;
+  max-width:650px;
   padding-top: 0px;
   margin-left:auto;
   margin-right:auto;
@@ -58,6 +58,7 @@ a {
   vertical-align: center;
   text-align:center;
   border-style: solid black;
+  padding: 10px;
 }
 
 .content input {
