--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -8,5 +8,5 @@
 <%= link_to "Login with Facebook", "/auth/facebook", class: "btn btn-primary" %>
 
 <%= form_tag(lessons_path, :method => "get", :url => "lessons_path", id: "search-form") do %><%= text_field_tag :query %>
-<%= submit_tag "Search" %>
+<%= submit_tag "Search", class: 'btn btn-primary' %>
 <% end %>
