--- a/app/views/lessons/index.html.erb
+++ b/app/views/lessons/index.html.erb
@@ -14,7 +14,7 @@
     <% end %>
   </p>
 
-  <p><%= link_to '+ Preview', lessons_path, class: 'btn btn-primary', id: 'add_btn' %></p>
+<a href="https://www.youtube.com/embed/<%= video.video_id %>" class="fresco">Preview</a>
 </div>
 
 <% end  %>
