added new frienships model

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -80,7 +80,7 @@
                 </ul>
             </li>
             <li>
-                <a href="#"> <span class="fa-stack fa-lg pull-left"><i class="fa fa-cart-plus fa-stack-1x "></i></span>Events</a>
+                </i></span>Events</a>
             </li>
             <li>
                 <a href="#"><span class="fa-stack fa-lg pull-left"><i class="fa fa-youtube-play fa-stack-1x "></i></span>About</a>
@@ -100,19 +100,7 @@
     </div><!-- /#sidebar-wrapper -->
 </div>
 
-
-
-
-
-
-
-
-
-
-
-
-        
-
+      
 		<%= yield %>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slideout/0.1.11/slideout.min.js"></script>
