--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -1,9 +1,9 @@
 body {
-  background-image:url("http://foxarc.com/c-blog/wp-content/uploads/2014/12/Watercolor-Background-Sky-Over-Meadow.jpg");
+  background-image:url("/assets/rachel_pageflip.gif");
   font-family: 'Karla', Arial, sans-serif;
   color: white;
   font-size: 100%;
-  line-height: 1.6;
+  line-height: 1.0;
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center center;
@@ -11,6 +11,8 @@ body {
   -moz-background-size: cover;
   background-size: cover;
 }
+
+
 h1, h2, h3, h4, h5, h6 {
   font-weight: bold;
   -webkit-hyphens: auto;
@@ -59,6 +61,23 @@ a {
   text-align:center;
   border-style: solid black;
   padding: 10px;
+}
+
+.m_container {
+  background-color: #000;
+  max-width:300px;
+  max-height:750px;
+  padding-top: 0px;
+  margin-left: 250px;
+  float:left;
+  width:33%;
+  margin-top: 0px;
+  vertical-align: center;
+  text-align:center;
+  border-style: 10px solid black;
+  padding: 10px;
+  opacity: 0.7;
+  filter: alpha(opacity=40);
 }
 
 .content input {
