--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,6 +1,7 @@
-<div class="container">
+<div class="m_container">
   <div class="header-text">
-    <h1>Welcome to BrushUp</h1>
+    <img src="/assets/brushup_logo1.png" width="250px">
+
     <!-- <a href="/assets/test.jpg" class="fresco">Fresco jQuery Test</a> -->
     <h2>What would you like to learn today?</h2><br>
   </div>
