--- a/app/views/profile/index.html.erb
+++ b/app/views/profile/index.html.erb
@@ -1,11 +1,14 @@
+<div class='row'>
+
+<div class="col l4 offset-l3">
 <%  @response.each do |video| %>
   <div class="card">
     <div class="card-image waves-effect waves-block waves-light">
-    <img src="<%= video.thumbnail_medium %>"/>
+    <img src="<%= video.thumbnail_medium %>" />
     </div>
     <div class="card-content">
       <span class="card-title activator grey-text text-darken-4"><%= video.title %></span>
-      <p><a href="#">This is a link</a></p>
+     
     </div>
     <div>
       <%= link_to 'delete', profile_path(video.video_id), :action => 'destroy', class: 'btn btn-danger', method: :delete %>
@@ -13,3 +16,5 @@
 
   </div>
 <% end %>
+</div>
+</div>
