--- a/app/views/lessons/index.html.erb
+++ b/app/views/lessons/index.html.erb
@@ -1,7 +1,9 @@
 
+<div class='row'>
 
+<div class="col l4 offset-l3">
 <%  @response.each do |video| %>
-<div class="container">
+<div>
   <h3><%= video.title %></h3> 
   <img src="<%= video.thumbnail_medium %>"/>
   <br />
@@ -14,7 +16,25 @@
     <% end %>
   </p>
 
-<a href="https://www.youtube.com/embed/<%= video.video_id %>" class="fresco">Preview</a>
+<!-- <a href="https://www.youtube.com/embed/<%= video.video_id %>" class="fresco">Preview</a>
+</div>
+ -->
+  <!-- Modal Trigger -->
+  <button data-target="modal1" class="btn modal-trigger" id='modal-trigger'>Preview</button>
+</div>
 </div>
 
+
+   <!-- Modal Structure -->
+  <div id="modal1" class="modal">
+    <div class="modal-content">
+      <h4>Modal Header</h4>
+      <p>A bunch of text</p>
+    </div>
+    <div class="modal-footer">
+      <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Agree</a>
+    </div>
+  </div>
+
 <% end  %>
+
