About page and cloudinary fix

--- a/app/assets/stylesheets/lessons.scss
+++ b/app/assets/stylesheets/lessons.scss
@@ -3,6 +3,11 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 /*  SECTIONS  */
+.movie {
+    width: 853;
+    height: 480;
+}
+
 .section {
 	clear: both;
 	padding: 0px;
