--- a/app/views/lessons/index.html.erb
+++ b/app/views/lessons/index.html.erb
@@ -1,5 +1,3 @@
-<%= @current_user.name %>
-
 <%  @response.each do |video| %>
 <div class="container">
   <h3><%= video.title %></h3> 
@@ -14,7 +12,24 @@
     <% end %>
   </p>
 
-<a href="https://www.youtube.com/embed/<%= video.video_id %>" class="fresco">Preview</a>
+
+  <!-- Modal Trigger -->
+  <a class="waves-effect waves-light btn modal-trigger" button data-target="modal1" href="#modal1">View Intro Video</a>
+
+  <!-- Modal Structure -->
+  <div id="modal1">
+   <div class="modal-content">
+     <h4>Modal Header</h4>
+     <p><div class="video-container">
+<iframe width="1102" height="620" src="https://www.youtube.com/watch/<%= video.video_id %>" frameborder="0" allowfullscreen></iframe>
+</div></p>
+   </div>
+   <div class="modal-footer">
+     <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Close</a>
+   </div>
+  </div>
+
+
 </div>
 
 <% end  %>
