--- a/app/views/lessons/index.html.erb
+++ b/app/views/lessons/index.html.erb
@@ -14,13 +14,9 @@
       <%= f.hidden_field :user_id, :value => @current_user.id %>
       <%= f.submit class: 'btn btn-primary'%>
     <% end %>
-  
-
   </p>
 
-<!-- <a href="https://www.youtube.com/embed/<%= video.video_id %>" class="fresco">Preview</a>
-</div>
- -->
+
   <!-- Modal Trigger -->
   <button data-target="modal1" class="btn modal-trigger" id='modal-trigger'>Preview</button>
 </div>
@@ -30,11 +26,11 @@
    <!-- Modal Structure -->
   <div id="modal1" class="modal">
     <div class="modal-content">
-      <h4>Modal Header</h4>
-      <p>A bunch of text</p>
+      <h4>video.title</h4>
+      <p><iframe>"https://www.youtube.com/embed/<%= video.video_id %>"</iframe></p>
     </div>
     <div class="modal-footer">
-      <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Agree</a>
+      <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">close</a>
     </div>
   </div>
 
