--- a/app/views/lessons/index.html.erb
+++ b/app/views/lessons/index.html.erb
@@ -24,9 +24,10 @@
    <!-- Modal Structure -->
   <div id="modal1" class="modal">
     <div class="modal-content">
-      <h4>video.title</h4>
-      <p><iframe>"https://www.youtube.com/embed/<%= video.video_id %>"</iframe></p>
+      <h4 class="grey-text"><%= video.title %></h4>
+      <iframe src="//www.youtube.com/embed/<%= video.video_id %>" ></iframe>
     </div>
+    <p class='black-text'><%= video.description %></p>
     <div class="modal-footer">
       <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">close</a>
     </div>
