--- a/app/assets/stylesheets/lessons.scss
+++ b/app/assets/stylesheets/lessons.scss
@@ -70,3 +70,20 @@
         width: 100%; 
     }
 }
+
+.modal-trigger {
+    margin-bottom: 10px;
+    float: right;
+    vertical-align: bottom;
+    margin-right: 20px;
+}
+
+.btn-primary {
+    vertical-align: bottom;
+    float: right;
+    margin-right: 22%;
+}
+
+.iframe {
+    margin-left: 60px;
+}
