--- a/app/views/lessons/index.html.erb
+++ b/app/views/lessons/index.html.erb
@@ -1,23 +1,22 @@
 <div class='row'>
 
-<div class="col l4 offset-l3">
 <%  @response.each do |video| %>
-<div>
-  <h3><%= video.title %></h3> 
+<div class="card col l6 offset-l4">
+  <h3 class='black-text'><%= video.title %></h3> 
   <img src="<%= video.thumbnail_medium %>"/>
   <br />
 
-  <p>
+  
     <%= form_for :video, :url => {:action => "new"}, :html => {:method => "GET"} do |f| %>
       <%= f.hidden_field :id, :value => video.video_id %>
       <%= f.hidden_field :user_id, :value => @current_user.id %>
       <%= f.submit class: 'btn btn-primary'%>
     <% end %>
-  </p>
+  
 
   <!-- Modal Trigger -->
   <button data-target="modal1" class="btn modal-trigger" id='modal-trigger'>Preview</button>
-</div>
+
 </div>
 
 
@@ -25,7 +24,7 @@
   <div id="modal1" class="modal">
     <div class="modal-content">
       <h4 class="grey-text"><%= video.title %></h4>
-      <iframe src="//www.youtube.com/embed/<%= video.video_id %>" ></iframe>
+      <iframe class="iframe" src="//www.youtube.com/embed/<%= video.video_id %>"></iframe>
     </div>
     <p class='black-text'><%= video.description %></p>
     <div class="modal-footer">
