--- a/app/views/profile/index.html.erb
+++ b/app/views/profile/index.html.erb
@@ -1,21 +1,17 @@
 <div class='row'>
-
-<div class="col l4 offset-l3">
+<h3 class='prof_head'>My Lessons</h3>
 <%  @response.each do |video| %>
-  <div class="card">
-    <div class="card-image waves-effect waves-block waves-light">
-    <img src="<%= video.thumbnail_medium %>" />
-    </div>
+<div class="card col l8 offset-l3">
+
+
+      <iframe class="iframe2" src="//www.youtube.com/embed/<%= video.video_id %>" width='700' height='350'></iframe>
+
     <div class="card-content">
       <span class="card-title activator grey-text text-darken-4"><%= video.title %></span>
-     
-    </div>
     <div>
       <%= link_to 'delete', profile_path(video.video_id), :action => 'destroy', class: 'btn btn-danger', method: :delete %>
     </div>
-
-
   </div>
+</div>
 <% end %>
-</div>
-</div>
+
