reformated lessons card

--- a/app/assets/stylesheets/lessons.scss
+++ b/app/assets/stylesheets/lessons.scss
@@ -81,7 +81,7 @@
 .btn-primary {
     vertical-align: bottom;
     float: right;
-    margin-right: 22%;
+    margin-right: 25%;
 }
 
 .iframe {
@@ -89,5 +89,5 @@
 }
 
 .thumb_img {
-    margin-left: 20px;
+    margin-left: 15%;
 }
