--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,6 +1,9 @@
 <div class="m_container">
   <div class="header-text">
-    <img src="/assets/brushup_logo1.png" width="250px">
+    <img src="<%= asset_path( 'brushup_logo1.png' ) %>" />
+
+About this conversation
+
 
     <!-- <a href="/assets/test.jpg" class="fresco">Fresco jQuery Test</a> -->
     <h2>What would you like to learn today?</h2><br>
