Refactored/Updates to views

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -4,10 +4,27 @@
 <h2>Meet the Team</h2>
 </div>
 </p>
+	<div class="content">
 
-    <div class="row">
-    <center>
-      <div class="col s4"><img src="assets/rachel.jpg" alt="" class="circle responsive-img" id="aboutpic"><br><h5>Rachel Fourquet</h5></div>
-      <div class="col s4"><img src="assets/alex.jpg" alt="" class="circle responsive-img" id="aboutpic"><br><h5>Alex Mac</h5></div>
-      <div class="col s4"><img src="assets/haylee.jpg" alt="" class="circle responsive-img" id="aboutpic"><br><h5>Haylee Nighbert</h5></div>
-</div>
+	<h2>Brush Up - Your Mind is a Canvas</h2>
+		<h3>Brush Up is an educational app for those who want to search for quality educational videos and save them for later viewing and learning.</h3>
+	</div>
+
+	<div class="header-text">
+		<h2>Meet the Team</h2>
+	</div>
+
+    	<div class="row" align="Center">
+      		<div class="col s4"><img src="assets/rachel.jpg" alt="" class="circle responsive-img" id="aboutpic"><br><h5>Rachel Fourquet</h5><br>
+      		<a href="https://github.com/rachelfourq">Github</a></div>
+      		<div class="col s4"><img src="assets/alex.jpg" alt="" class="circle responsive-img" id="aboutpic"><br><h5>Alex Mac</h5><br>
+      		<a href="https://github.com/alex-mac">Github</a></div>
+      		<div class="col s4"><img src="assets/haylee.jpg" alt="" class="circle responsive-img" id="aboutpic"><br><h5>Haylee Nighbert</h5><br>
+      		<a href="https://github.com/hayleenighbert">Github</a></div>
+		</div><br>
+
+		<div class="content">
+
+		<h3>
+		We are a group of developers at General Assembly, Seattle that are passionate about creating new and exciting apps. This prototype educational app is for those who are thirsty for knowledge - like we are!</h3>
+		</div>
