--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -1,5 +1,6 @@
 body {
-  background-image:url("/assets/rachel_pageflip.gif");
+  background-image:url("
+http://hayleenoellephotography.com/images/rachel_pageflip.gif");
   font-family: 'Karla', Arial, sans-serif;
   color: #fff;
   font-size: 100%;
@@ -14,7 +15,6 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
   color: white;
-  font-weight: bold;
   -webkit-hyphens: auto;
      -moz-hyphens: auto;
       -ms-hyphens: auto;
@@ -33,6 +33,9 @@ h3 {
   font-size: 18px;
 }
 
+p {
+  font-size: 14px;
+}
 
 a {
   color: #fff;
@@ -84,8 +87,17 @@ a {
   height: 175px;
 }
 
+.logo {
+    position: absolute;
+    top: 0px;
+    right: 0px;
+}
+
 .content input {
-  text-align:center;}
+  text-align:center;
+  padding-left: 10px;
+  margin-left:10px;
+  }
 
 .divider {
   display: block;
