--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,15 +1,17 @@
-<div class="m_container">
-  <div class="header-text">
-    <img src="/assets/brushup_logo1.png" width="250px">
+<img src="http://hayleenoellephotography.com/images/brushup_logo1.png" class="logo" width="250px">
 
-    <!-- <a href="/assets/test.jpg" class="fresco">Fresco jQuery Test</a> -->
-    <h2>What would you like to learn today?</h2><br>
-  </div>
+	<div class="m_container">
+  		<div class="header-text">
+    		<h3>What would you like to learn today?</h3><br>
+  		</div>
  
-  <% if @current_user === nil%>
-    <%= link_to "Login with Facebook", "/auth/facebook", class: "btn btn-primary" %>
-  <% end %>
+  
+  	<% if @current_user === nil%>
+    	<%= link_to "Login with Facebook", "/auth/facebook", class: "btn btn-primary" %>
+  	<% end %>
 
-<%= form_tag(lessons_path, :method => "get", :url => "lessons_path", id: "search-form") do %><%= text_field_tag :query %>
-<%= submit_tag "Search", class: 'btn btn-primary' %>
-<% end %>
+  	<br>
+		<%= form_tag(lessons_path, :method => "get", :url => "lessons_path", id: "search-form") do %><%= text_field_tag :query %>
+		<%= submit_tag "Search", class: 'btn btn-primary' %>
+
+	<% end %>
