changed most files

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -1,5 +1,5 @@
 body {
-  background-image:url("/assets/rachel_pageflip.gif");
+  background-image:url("http://hayleenoellephotography.com/images/rachel_pageflip.gif");
   font-family: 'Karla', Arial, sans-serif;
   color: #fff;
   font-size: 100%;
