--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -7,9 +7,9 @@
 
     <div class="row">
     <center>
-      <div class="col s4"><img src="assets/rachel.jpg" alt="" class="circle responsive-img" id="aboutpic"><br><h5>Rachel Fourquet</h5></div>
+      <div class="col s4"><img src="http://hayleenoellephotography.com/images/rachel.jpg" alt="" class="circle responsive-img" id="aboutpic"><br><h5>Rachel Fourquet</h5></div>
       <div class="col s4"><img src="http://hayleenoellephotography.com/images/alex.jpg" alt="" class="circle responsive-img" id="aboutpic" height="200px"><br><h5>Alex Mac</h5></div>
-      <div class="col s4"><img src="assets/haylee.jpg" alt="" class="circle responsive-img" id="aboutpic"><br><h5>Haylee Nighbert</h5></div>
+      <div class="col s4"><img src="http://hayleenoellephotography.com/images/haylee.jpg" alt="" class="circle responsive-img" id="aboutpic"><br><h5>Haylee Nighbert</h5></div>
 </div>
 <div class="content">
     We are a group of developers at General Assembly, Seattle that are passionate about creating new and exciting apps. This prototype educational app is for those who are thirsty for knowledge - like we are!
