--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,6 +1,6 @@
 <div class="m_container">
   <div class="header-text">
-    <!-- <img src="http://i.imgur.com/ncrxdIO.png" /> -->
+    <img src="http://hayleenoellephotography.com/images/brushup_logo1.png" />
 
 About this conversation
 
