--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -174,6 +174,10 @@ a {
     color: #999999;
 }
  
+.brush {
+  width: 30px;
+}
+
 .sidebar-nav li a:hover {
     text-decoration: none;
     color: #fff;
